# rust-compiler

./: .clang-format  .gitignore  BinaryOperationNode.cpp  BinaryOperationNode.hpp  BlockNode.cpp  BlockNode.hpp  CMakeLists.txt  ConstantItemNode.cpp  ConstantItemNode.hpp  ErrorNode.cpp  ErrorNode.hpp  ExpressionNode.hpp  ExpressionParser.cpp  ExpressionParser.hpp  FunctionNode.cpp  FunctionNode.hpp  ISymbol.hpp  ISyntaxTreeVisitor.hpp  IdentifierNode.hpp  IfNode.cpp  IfNode.hpp  ImportExportTable.hpp  InfiniteLoopNode.cpp  InfiniteLoopNode.hpp  InputStream.hpp  IteratorLoopNode.cpp  IteratorLoopNode.hpp  Keyword.hpp  KeywordManager.hpp  LICENSE  LetNode.cpp  LetNode.hpp  LiteralNode.hpp  Main.cpp  PatternNodes.cpp  PatternNodes.hpp  PredicateLoopNode.cpp  PredicateLoopNode.hpp  PrefixUnaryOperationNode.cpp  PrefixUnaryOperationNode.hpp  (+26 more)
.github/workflows/: cmake.yml
tests/comments/test1/: input.txt
tests/comments/test2/: input.txt
tests/comments/test3/: input.txt
tests/comments/test4/: correct.txt
tests/expression/test1/: correct.txt
tests/expression/test10 (error)/: input.txt
tests/expression/test2/: correct.txt
tests/expression/test3/: correct.txt
tests/expression/test4/: correct.txt  input.txt
tests/expression/test5/: correct.txt  input.txt
tests/expression/test6 (error)/: correct.txt  input.txt
tests/expression/test7 (error)/: correct.txt  input.txt
tests/expression/test8/: correct.txt  input.txt
tests/expression/test9 (error)/: correct.txt  input.txt
tests/identifiers/test1/: correct.txt  input.txt
tests/identifiers/test2/: correct.txt  input.txt
tests/identifiers/test3 (error)/: correct.txt  input.txt
tests/identifiers/test4/: correct.txt  input.txt
tests/identifiers/test5 (error)/: correct.txt  input.txt
tests/keywords/test1/: correct.txt  input.txt
tests/keywords/test2 (error)/: correct.txt  input.txt
tests/keywords/test3 (complex)/: correct.txt  input.txt
tests/literals/boolean/test1/: correct.txt  input.txt
tests/literals/boolean/test2 (error)/: correct.txt  input.txt
tests/literals/byte string/test1/: correct.txt  input.txt
tests/literals/byte string/test2/: correct.txt  input.txt
tests/literals/byte string/test3/: correct.txt  input.txt
tests/literals/byte string/test4/: correct.txt  input.txt
tests/literals/byte string/test5/: correct.txt  input.txt
tests/literals/byte/test1/: correct.txt  input.txt
tests/literals/byte/test2/: correct.txt  input.txt
tests/literals/byte/test3/: correct.txt  input.txt
tests/literals/byte/test4/: correct.txt  input.txt
tests/literals/character/test1/: correct.txt  input.txt
tests/literals/character/test2/: correct.txt  input.txt
tests/literals/character/test3 (error)/: correct.txt  input.txt
tests/literals/character/test4/: correct.txt  input.txt
tests/literals/float/test1/: correct.txt  input.txt
tests/literals/float/test2/: correct.txt  input.txt
tests/literals/float/test3/: correct.txt  input.txt
tests/literals/float/test4/: correct.txt  input.txt
tests/literals/float/test5 (error)/: correct.txt  input.txt
tests/literals/integer/test1/: correct.txt  input.txt
tests/literals/integer/test2 (error)/: correct.txt  input.txt
tests/literals/integer/test3 (error)/: correct.txt  input.txt
tests/literals/integer/test4/: correct.txt  input.txt
tests/literals/integer/test5 (complex)/: correct.txt  input.txt
tests/literals/integer/test6/: correct.txt  input.txt
tests/literals/raw byte string/test1/: correct.txt  input.txt
tests/literals/raw byte string/test2/: correct.txt  input.txt
tests/literals/raw byte string/test3/: correct.txt
tests/literals/raw byte string/test4 (error)/: correct.txt  input.txt
tests/literals/raw string/test2/: input.txt
tests/literals/raw string/test3/: correct.txt  input.txt
tests/literals/raw string/test4 (error)/: correct.txt  input.txt
tests/literals/string/test1/: correct.txt  input.txt
tests/literals/string/test2/: correct.txt  input.txt
tests/literals/string/test3 (error)/: correct.txt  input.txt
tests/literals/string/test4/: correct.txt  input.txt
tests/literals/string/test5/: correct.txt  input.txt
tests/punctuation/test1/: correct.txt  input.txt
tests/punctuation/test2 (error)/: correct.txt  input.txt
tests/punctuation/test3/: correct.txt  input.txt
tests/punctuation/test4/: correct.txt  input.txt
tests/punctuation/test5/: correct.txt  input.txt
tests/punctuation/test6/: correct.txt  input.txt
tests/whitespace/test1/: correct.txt
tests/whitespace/test2/: correct.txt  input.txt
tests/whitespace/test3/: correct.txt  input.txt
